#include_directories(../or10n_tests/includes)

#add_subdirectory(testTimer)
add_subdirectory(testInterrupt)
add_subdirectory(testUART)
add_subdirectory(testI2C)

#add_subdirectory(testSTDIO)
#add_subdirectory(testSPIM)
#add_subdirectory(testPipeStage)
#add_subdirectory(testL2)
#add_subdirectory(testGPIO)
#add_subdirectory(testAndSet)
#add_subdirectory(testSPI_slave)
#add_subdirectory(testHWCE)
#add_subdirectory(testHWCE_onlyconv)
