include_directories(ml_shared)

add_subdirectory(mlAxpy)
add_subdirectory(mlBilat)
add_subdirectory(mlButter)
add_subdirectory(mlDct)
add_subdirectory(mlDist)
add_subdirectory(mlDotp)
add_subdirectory(mlGemm)
add_subdirectory(mlGemv)
add_subdirectory(mlGivens)
add_subdirectory(mlGrad)
add_subdirectory(mlGradDir)
add_subdirectory(mlHomErr)
add_subdirectory(mlHom)
add_subdirectory(mlQr)
add_subdirectory(mlSin)
add_subdirectory(mlWdotp)
add_subdirectory(mlChol)
add_subdirectory(mlFir)
add_subdirectory(mlRbf)
add_subdirectory(mlSvd)
add_subdirectory(mlLog)
add_subdirectory(mlSchur)
