#include_directories(../or10n_tests/includes)

#add_subdirectory(testTimer)

#add_subdirectory(testSTDIO)
#add_subdirectory(testSPIM)
#add_subdirectory(testPipeStage)
#add_subdirectory(testMMU)
#add_subdirectory(testL2)
#add_subdirectory(testGPIO)

#add_subdirectory(testBarrier)
#add_subdirectory(testAndSet)
#add_subdirectory(testMCHAN)
#add_subdirectory(testSPI_slave)

#add_subdirectory(testI2C)
#add_subdirectory(testI2S)
#add_subdirectory(testHWCE)
#add_subdirectory(testHWCE_onlyconv)

add_subdirectory(testUART)